Increase movie list spacing (fixes #5)

--- a/app/assets/styles/_movies.scss
+++ b/app/assets/styles/_movies.scss
@@ -1,3 +1,7 @@
+.movies-list {
+    margin-bottom: 6em;
+}
+
 .movie-entry {
     display: table;
     height: 20em;
